clang/test/BSC/Negative/Method/Struct/struct_no_function_name/struct_no_function_name.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

int main() {
  struct Foo foo = {.a = 1};
  int a = struct Foo::(&foo); // expected-error {{expected identifier}}
  return a - 1;
}